Mon Jan 06 12:10:08 GMT 2014  Olly Betts <olly@survex.com>

	* python/pythontest.py,python3/pythontest.py: When testing
	  valuestreams, just use the xapian.WritableDatabase constructor
	  rather than chert_open() - that code dates back to when chert was
	  the only disk-based backend to support valuestreams, and it wasn't
	  the default backend.

Wed Jan 01 04:22:36 GMT 2014  Olly Betts <olly@survex.com>

	* python3/Makefile.am: Fix handling of DOCUMENTATION_RULES.

Wed Dec 25 20:30:49 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Quote $PYTHON, etc in backward compatibility code.

Wed Dec 25 06:29:07 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Fix some issues with the previous change, so it works
	  as intended.

Tue Dec 24 21:26:27 GMT 2013  Olly Betts <olly@survex.com>

	* python3/Makefile.am: Use PYTHON to run doxy2swig, as that's reliably
	  set when we're in maintainer mode.

Tue Dec 24 21:21:17 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,python/Makefile.am: Rename the variables
	  used for the python2 bindings to begin PYTHON2 instead of PYTHON.
	  Try python2 before python when looking for an interpreter for the
	  python2 bindings, as some distros now point /usr/bin/python at
	  Python 3.

Sat Dec 21 01:06:19 GMT 2013  Olly Betts <olly@survex.com>

	* python3/smoketest.py: Add parentheses around print arguments.

Fri Dec 20 03:50:50 GMT 2013  Olly Betts <olly@survex.com>

	* xapian-headers.i: Update for addition of Xapian::DB_NO_TERMLIST.

Fri Dec 20 00:22:02 GMT 2013  Olly Betts <olly@survex.com>

	* csharp/docs/index.html,lua/docs/index.html,php/docs/index.html,
	  php/smoketest.php,python/docs/index.html,python3/docs/index.rst,
	  xapian-headers.i: Update for addition of Xapian::DB_BACKEND_STUB
	  and deprecationg of Xapian::Auto::open_stub().

Thu Dec 19 09:48:04 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from 1.2.16 and ChangeLog.

Thu Dec 19 06:45:17 GMT 2013  Olly Betts <olly@survex.com>
