@@ -772,6 +772,7 @@ def test_synonyms_iter():
     expect([item for item in dbr.synonym_keys('hello')], ['hello'])
 
     db.close()
+    expect(xapian.Database.check(dbpath), 0);
     dbr.close()
     shutil.rmtree(dbpath)
 
@@ -822,6 +823,7 @@ def test_metadata_keys_iter():
     expect([item for item in dbr.metadata_keys('type')], ['type'])
 
     db.close()
+    expect(xapian.Database.check(dbpath), 0);
     dbr.close()
     shutil.rmtree(dbpath)
 
@@ -1053,6 +1055,7 @@ def test_postingsource():
     expect([item.docid for item in mset], [1, 3, 5, 7, 9])
 
     db.close()
+    expect(xapian.Database.check(dbpath), 0);
     shutil.rmtree(dbpath)
 
 def test_postingsource2():
@@ -1078,6 +1081,7 @@ def test_postingsource2():
     expect([item.docid for item in mset], [2, 1, 5, 3, 4, 8, 9, 6, 7, 10])
 
     db.close()
+    expect(xapian.Database.check(dbpath), 0);
     shutil.rmtree(dbpath)
 
 def test_value_stats():
@@ -1104,6 +1108,7 @@ def test_value_stats():
     expect(db.get_value_upper_bound(2), "")
 
     db.close()
+    expect(xapian.Database.check(dbpath), 0);
     shutil.rmtree(dbpath)
 
 def test_get_uuid():
