@@ -765,6 +765,7 @@ def test_synonyms_iter():
     expect([item for item in dbr.synonym_keys('hello')], [b'hello'])
 
     db.close()
+    expect(xapian.Database.check(dbpath), 0);
     dbr.close()
     shutil.rmtree(dbpath)
 
@@ -815,6 +816,7 @@ def test_metadata_keys_iter():
     expect([item for item in dbr.metadata_keys('type')], [b'type'])
 
     db.close()
+    expect(xapian.Database.check(dbpath), 0);
     dbr.close()
     shutil.rmtree(dbpath)
 
@@ -839,6 +841,7 @@ def test_spell():
     expect([(item.term, item.termfreq) for item in dbr.spellings()], [(b'hello', 1), (b'mell', 2)])
 
     db.close()
+    expect(xapian.Database.check(dbpath), 0);
     dbr.close()
     shutil.rmtree(dbpath)
 
@@ -1046,6 +1049,7 @@ def test_postingsource():
     expect([item.docid for item in mset], [1, 3, 5, 7, 9])
 
     db.close()
+    expect(xapian.Database.check(dbpath), 0);
     shutil.rmtree(dbpath)
 
 def test_postingsource2():
@@ -1097,6 +1101,7 @@ def test_value_stats():
     expect(db.get_value_upper_bound(2), b"")
 
     db.close()
+    expect(xapian.Database.check(dbpath), 0);
     shutil.rmtree(dbpath)
 
 def test_get_uuid():
