@@ -1,3 +1,10 @@
+Thu Jan 09 03:34:17 GMT 2014  Olly Betts <olly@survex.com>
+
+	* python/pythontest.py,python3/pythontest.py,xapian-head.i,
+	  xapian-headers.i: Wrap Xapian::Database::check() for the bindings
+	  with arguments (path, opts = 0), and if opts != 0, send output to
+	  stdout.
+
 Mon Jan 06 12:10:08 GMT 2014  Olly Betts <olly@survex.com>
 
 	* python/pythontest.py,python3/pythontest.py: When testing
